# bib2cv

./: README.md  pyproject.toml
examples/: output.tex  overrides.json  pubs.bib
src/bib2cv/: __init__.py  cli.py  formatter.py  journals.py  parser.py
src/bib2cv.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_formatter.py  test_parser.py
tests/fixtures/: sample.bib
